--- a/src/FIADBOracleServices.csproj
+++ b/src/FIADBOracleServices.csproj
@@ -36,15 +36,12 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Oracle.DataAccess, Version=4.112.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\oraclexe\app\oracle\product\11.2.0\server\odp.net\bin\2.x\Oracle.DataAccess.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Data.OracleClient" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -63,13 +60,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ado_data_oracle\src\ado_data_oracle.csproj">
+      <Project>{93b7f9a3-f9be-49ee-95d9-236bfb4f58c0}</Project>
+      <Name>ado_data_oracle</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Fcs-Class-Library\src\FcsClassLibrary.csproj">
       <Project>{7F40D3A7-B7B5-45C5-B414-018F2A09F86F}</Project>
       <Name>FcsClassLibrary</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ODP\src\ODP.csproj">
-      <Project>{498D58F0-D98C-4B18-AB46-90CDE59592DB}</Project>
-      <Name>ODP</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
